--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "author": "Susana Gómez",
   "license": "ISC",
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
-    "@heroicons/react": "^2.0.13",
+    "@headlessui/react": "^0.0.0-insiders.4da0b3a",
+    "@heroicons/react": "^1.0.6",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
