--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
+    "eslint": "^8.28.0",
+    "eslint-config-next": "^12.0.4",
+    "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dom-pseudo": "^1.1.21",
     "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
