--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
     "eslint": "^8.28.0",
     "eslint-config-next": "^12.0.4",
+    "jose": "^4.11.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dom-pseudo": "^1.1.21",
-    "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
-    "react-select": "^5.7.0",
-    "typescript": "4.9.3"
+    "react-select": "^5.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
