--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
-    "eslint": "^8.28.0",
     "eslint-config-next": "^12.0.4",
     "jose": "^4.11.2",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
