--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jose": "^4.11.2",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
