--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf-autotable": "^3.5.28",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
+    "puppeteer-core": "^19.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dom-pseudo": "^1.1.21",
