--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^0.0.0-insiders.4da0b3a",
     "@heroicons/react": "^1.0.6",
+    "@react-pdf/renderer": "^3.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -23,13 +24,13 @@
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "eslint-config-next": "^12.0.4",
+    "html-pdf": "^3.0.1",
     "jose": "^4.11.2",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
-    "puppeteer-core": "^19.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dom-pseudo": "^1.1.21",
