--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "eslint-config-next": "^12.0.4",
-    "html-pdf": "^3.0.1",
     "jose": "^4.11.2",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
@@ -35,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-dom-pseudo": "^1.1.21",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "react-select": "^5.7.0"
   },
   "devDependencies": {
