--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "Susana Gómez",
   "license": "ISC",
+  "browser": {
+    "html-pdf": false
+  },
   "dependencies": {
     "@headlessui/react": "^0.0.0-insiders.4da0b3a",
     "@heroicons/react": "^1.0.6",
@@ -25,6 +28,7 @@
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "eslint-config-next": "^12.0.4",
+    "html-pdf": "^3.0.1",
     "jose": "^4.11.2",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
