--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@headlessui/react": "^0.0.0-insiders.4da0b3a",
     "@heroicons/react": "^1.0.6",
-    "@react-pdf/renderer": "^3.1.2",
+    "@react-pdf/renderer": "^3.1.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -46,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.5"
   }
 }
